# linux-commander

./: pyproject.toml
linux_commander/: app.py
linux_commander/templates/: command_result.html  explorer.html  index.html  results_paginated.html
