[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-commander"
version = "1.0.0"
authors = [
  { name="My Name", email="me@example.com" },
]
description = "An interactive tool for Linux filesystems."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]
dependencies = [
    "Flask",
    "humanize",
    "werkzeug",
]

[project.scripts]
linux-commander = "linux_commander.app:main"
